[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/themes/RocketeerTrainingTitle.tres" type="Theme" id=1]
[ext_resource path="res://game/themes/RocketeerTrainingStandard.tres" type="Theme" id=2]
[ext_resource path="res://game/status/StatusScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/godotengine.org/icon_color.png" type="Texture" id=4]

[node name="StatusScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 102.0
theme = ExtResource( 1 )
text = "Rocketeer Training"
align = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 422.0
margin_top = 400.0
margin_right = 602.0
margin_bottom = 467.0
theme = ExtResource( 2 )
text = "Start"

[node name="MadeWithGodot" type="Label" parent="."]
margin_left = 498.0
margin_top = 497.0
margin_right = 873.0
margin_bottom = 558.0
theme = ExtResource( 2 )
text = "Made with Godot"

[node name="GodotIcon" type="Sprite" parent="."]
position = Vector2( 943, 527 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="LastScoreLabel" type="Label" parent="."]
margin_left = 317.0
margin_top = 178.0
margin_right = 562.0
margin_bottom = 239.0
theme = ExtResource( 2 )
text = "Last Score:"

[node name="LastScoreValue" type="Label" parent="."]
margin_left = 579.0
margin_top = 178.0
margin_right = 693.0
margin_bottom = 239.0
theme = ExtResource( 2 )
text = "000"

[node name="BestScoreLabel" type="Label" parent="."]
margin_left = 311.0
margin_top = 251.0
margin_right = 562.0
margin_bottom = 312.0
theme = ExtResource( 2 )
text = "Best Score:"

[node name="BestScoreValue" type="Label" parent="."]
margin_left = 577.0
margin_top = 251.0
margin_right = 691.0
margin_bottom = 312.0
theme = ExtResource( 2 )
text = "000"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
